<resources>
    <string name="app_name">Coffee Email</string>
    <string name="toppings">Choose Toppings: </string>
    <string name="cream">Cream</string>
    <string name="choco">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="order_sum">Order Summary</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
</resources>
